Fix logical and codestyle issues, complete todos